# VideoCaptureCAE

./: .gitignore
app/: build.gradle
app/includes/opencv2/: cvconfig.h
app/src/main/: AndroidManifest.xml
app/src/main/java/com/androidwave/camera2video/: AutoExposureSDK.java  CameraFragment.java  MainActivity.java
app/src/main/java/com/androidwave/camera2video/camera/: AutoFitTextureView.java  CameraVideoFragment.java
app/src/main/java/com/androidwave/camera2video/ui/base/: BaseFragment.java
app/src/main/java/com/androidwave/camera2video/utils/: Constants.java  ExImageFormat.java  ImageData.java  ImageListener.java  ImgUtils.java  NativeConversion.java
app/src/main/jni/: CMakeLists.txt  autoexp.cpp  autoexp.h  jni_interface.cpp
app/src/main/res/layout/: fragment_camera.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
